--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			var scheduleoWidth = '900';
 			var ShowSchedulemeImg = true;
 			//if showSchedulemeImg is set to false then it will override the properties below. This can be used if you want to call overlay from your own custom link.
-			var ScheduleMeBgImg = '/img/booking.png';
+			var ScheduleMeBgImg = '/img/booking3.png';
 			var ScheduleMeBg = 'transparent';
 			var ScheduleMeWidth = '55';
 			var ScheduleMeHeight = '323';
