--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
 		<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:site_name" content="Фаблаб МИСиС Москва">
+		<meta name="Keywords" content="fab lab, fablab, фаблаб, фаблаб МИСиС, фаблаб москва, хакатоны москва, fab lab в москве, фаб лаб, фаб лаборатория, moscow fablab, фаблабы, fablab ниту мисис, владимир кузнецов">
 	</head>
 	<body class="{{location.path().replace('/', ' ').replace('/', ' ')}}">
 		<ng-include src="'include/header.html'"></ng-include>
