--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:site_name" content="Фаблаб МИСиС Москва">
 		<meta name="Keywords" content="fab lab, fablab, фаблаб, фаблаб МИСиС, фаблаб москва, хакатоны москва, fab lab в москве, фаб лаб, фаб лаборатория, moscow fablab, фаблабы, fablab ниту мисис, владимир кузнецов">
+		<meta name="description" content="Фаблаб МИСиС — первый Российский фаблаб">
 	</head>
 	<body class="{{location.path().replace('/', ' ').replace('/', ' ')}}">
 		<ng-include src="'include/header.html'"></ng-include>
